# personal-cfo

./: .gitignore  README.md  balance_state.json  main.py  pyproject.toml  requirements.txt
scripts/: gmail_auth.py
static/: app.js  index.html  style.css
