[project]
name = "personal-cfo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-cloud-firestore>=2.27.0",
    "google-genai>=2.6.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.48.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-cloud-secret-manager>=2.0.0",
    "beautifulsoup4>=4.0.0",
]
